--- a/DatasetPrep.ipynb
+++ b/DatasetPrep.ipynb
@@ -470,12 +470,12 @@
         "          if file_category == 'images':\n",
         "            if file.endswith(\".jpg\"):\n",
         "              image = Image.open(file)\n",
-        "              #image = image.convert(\"RGB\")\n",
+        "              image = image.convert(\"RGB\")\n",
         "\n",
         "              new_filename = os.path.splitext(os.path.basename(file))[0] + \".jpg\"\n",
-        "              #print(os.path.join(final_dataset_root, subset_type, \"images\", new_filename))\n",
+        "              print(os.path.join(final_dataset_root, subset_type, \"images\", new_filename))\n",
         "\n",
-        "              #image.save(os.path.join(final_dataset_root, subset_type, \"images\", new_filename))\n",
+        "              image.save(os.path.join(final_dataset_root, subset_type, \"images\", new_filename))\n",
         "\n",
         "          if file_category == 'labels':\n",
         "              with open(file, \"r\") as src:\n",
@@ -492,17 +492,12 @@
         "                dst_file = os.path.join(final_dataset_root, subset_type, \"labels\", os.path.basename(file))\n",
         "\n",
         "                with open(dst_file, \"w\") as dst:\n",
-        "                  dst.writelines(lines_new)\n",
-        "\n",
-        "                return\n",
-        "\n",
-        "\n",
-        "\n"
+        "                  dst.writelines(lines_new)"
       ],
       "metadata": {
         "id": "DHF-EVAxn9gC"
       },
-      "execution_count": 549,
+      "execution_count": 553,
       "outputs": []
     },
     {
@@ -513,7 +508,7 @@
       "metadata": {
         "id": "hPBZ3lOYxNqJ"
       },
-      "execution_count": 550,
+      "execution_count": 552,
       "outputs": []
     }
   ]
