--- a/DatasetPrep.ipynb
+++ b/DatasetPrep.ipynb
@@ -28,6 +28,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "<center><h1> <b>Wildlife Detection CV Project - Dataset Preparation</b> </center> </h1>\n",
+        "\n",
         "This notebook is based on Week 6 tutorial, we use it to check, enumerate, analyse our datasets in terms of correct labeling and balance, before merging them and doing the training with YOLO."
       ],
       "metadata": {
@@ -100,7 +102,7 @@
       "metadata": {
         "id": "dqGwCTe9LoIV"
       },
-      "execution_count": 382,
+      "execution_count": 554,
       "outputs": []
     },
     {
@@ -510,6 +512,15 @@
       },
       "execution_count": 552,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The consolidated dataset should have been appeared in Drive when the code finished its job."
+      ],
+      "metadata": {
+        "id": "2XsqYGYI_Pke"
+      }
     }
   ]
 }
