--- a/ComputerVisionProject.ipynb
+++ b/ComputerVisionProject.ipynb
@@ -233,7 +233,7 @@
       "metadata": {
         "id": "Gn5uUxco8p0S"
       },
-      "execution_count": 8,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -431,9 +431,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4c8e6339-8f19-44b2-9567-ec2085f78701"
+        "outputId": "3625038e-4412-49b1-fc34-8ecef5f51b64"
       },
-      "execution_count": 26,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -797,7 +797,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 27
         }
       ]
     },
@@ -805,29 +805,30 @@
       "cell_type": "code",
       "source": [
         "%%writefile config.yaml\n",
-        "path: /content/drive/MyDrive/Tutorials/Datasets/FRUIT DATA/Final_data\n",
-        "train: /content/drive/MyDrive/Tutorials/Datasets/FRUIT DATA/Final_data/images/train\n",
-        "#test: (test dataset folder path)\n",
-        "val: /content/drive/MyDrive/Tutorials/Datasets/FRUIT DATA/Final_data/images/val\n",
+        "path: '/content/drive/MyDrive/IAT481/481 CV Project/Datasets/Final'\n",
+        "train: '/content/drive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images'\n",
+        "val: '/content/drive/MyDrive/IAT481/481 CV Project/Datasets/Final/valid/images'\n",
+        "test: '/content/drive/MyDrive/IAT481/481 CV Project/Datasets/Final//test/images'\n",
         "\n",
         "# Classes\n",
-        "nc: 3 # replace based on your dataset's number of classes\n",
+        "nc: 4 # replace based on your dataset's number of classes\n",
         "\n",
         "# Class names\n",
         "# replace all class names with your own classes' names\n",
         "names:\n",
-        "  0: orange\n",
-        "  1: apple\n",
-        "  2: banana"
+        "  0: bear\n",
+        "  1: raccoon\n",
+        "  2: rat\n",
+        "  3: skunk"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0zfhXgYLtP6l",
-        "outputId": "4a465c5f-bb89-41f8-ceac-b47e33ab3f86"
+        "outputId": "ed0f81a3-74e3-482c-9fec-d37e68d5ff10"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
