--- a/DatasetVisualization.ipynb
+++ b/DatasetVisualization.ipynb
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<center><h1> <b>Wildlife Detection CV Project - Dataset Visualization</b> </center> </h1>\n",
+        "<center><h1> <b>Wildlife and Pest Animal Detection - Dataset Visualization</b> </center> </h1>\n",
         "\n",
         "This notebook serves as a tool to explore the final dataset that we have created after the merge of found datasets and our own manually labeled images.\n",
         "\n"
